WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206463
Fix SDK availability macros
https://bugs.webkit.org/show_bug.cgi?id=206463
Summary
Fix SDK availability macros
Keith Rollin
Reported
2020-01-17 17:44:27 PST
Bug 202243
(fixed in
r252174
) updated our availability macros for macOS 10.15 and iOS 13. However, some of the changes were not correct at this time and prevent the processing of the macros when building the macOS 10.15 (and, presumably, iOS 13) SDKs. Revert the relevant changes.
Attachments
Patch
(2.22 KB, patch)
2020-01-21 11:55 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Patch
(2.22 KB, patch)
2020-01-21 12:28 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Patch
(3.67 KB, patch)
2020-01-22 11:53 PST
,
Keith Rollin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Keith Rollin
Comment 1
2020-01-17 17:44:40 PST
<
rdar://problem/58581906
>
Keith Rollin
Comment 2
2020-01-17 17:45:59 PST
> and, presumably, iOS 13
No. This was OK. I think. I'll check.
Keith Rollin
Comment 3
2020-01-20 16:51:37 PST
.../System/Library/Frameworks/WebKit.framework/Headers/WKURLSchemeHandler.h has the expected contents.
Keith Rollin
Comment 4
2020-01-21 11:55:59 PST
Created
attachment 388329
[details]
Patch
Timothy Hatcher
Comment 5
2020-01-21 12:17:53 PST
Comment on
attachment 388329
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388329&action=review
> Source/WebKit/ChangeLog:11 > + overs our exported headers, changing macros like WK_API_AVAILABLE to
s/overs/over/
Keith Rollin
Comment 6
2020-01-21 12:28:03 PST
Created
attachment 388333
[details]
Patch
WebKit Commit Bot
Comment 7
2020-01-21 13:12:18 PST
Comment on
attachment 388333
[details]
Patch Clearing flags on attachment: 388333 Committed
r254876
: <
https://trac.webkit.org/changeset/254876
>
WebKit Commit Bot
Comment 8
2020-01-21 13:12:19 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 9
2020-01-21 13:58:15 PST
Catalina Release/Debug builds are failing after this change: /Volumes/Data/slave/catalina-debug/build/WebKitBuild/Debug/WebKit.framework/Headers/WKFoundation.h:35:9: error: 'API_AVAILABLE' macro redefined [-Werror,-Wmacro-redefined] /Volumes/Data/slave/catalina-debug/build/WebKitBuild/Debug/WebKit.framework/Headers/WKFoundation.h:37:9: error: 'API_DEPRECATED' macro redefined [-Werror,-Wmacro-redefined] /Volumes/Data/slave/catalina-debug/build/WebKitBuild/Debug/WebKit.framework/Headers/WKFoundation.h:38:9: error: 'API_DEPRECATED_WITH_REPLACEMENT' macro redefined [-Werror,-Wmacro-redefined]
https://build.webkit.org/builders/Apple-Catalina-Debug-Build/builds/2793
Ryan Haddad
Comment 10
2020-01-21 14:02:41 PST
Reverted
r254876
for reason: Broke Catalina builds. Committed
r254879
: <
https://trac.webkit.org/changeset/254879
>
Keith Rollin
Comment 11
2020-01-22 11:53:53 PST
Created
attachment 388454
[details]
Patch
Keith Rollin
Comment 12
2020-01-22 11:56:14 PST
From an internal chat regarding this issue: OK, I think I have it worked out. The problem is with a file we export called WKFoundation.h This file gets exported and then post-processed. The change I made concerns how its post-processed. The file *was* getting post-processed incorrectly; my change was to fix that and get it to be processed correctly. The problem with an incremental build is that this file continues to exist at its exported location and in its (incorrectly) post-processed state. Because it has a timestamp newer than the original pre-exported, pre-processed versions, the file will not get cleaned up according to the new post-processing rules. This state of things then leads a subsequent header-file-post-processor to come along and mangle the file even more, leading to the build error. I can fix this by touching WKFoundation.h when I re-upload my patch. This will get a new, clean copy to get exported, and then post-processed correctly.
WebKit Commit Bot
Comment 13
2020-01-22 12:52:55 PST
Comment on
attachment 388454
[details]
Patch Clearing flags on attachment: 388454 Committed
r254938
: <
https://trac.webkit.org/changeset/254938
>
WebKit Commit Bot
Comment 14
2020-01-22 12:52:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug